Update profile done

--- a/src/App.css
+++ b/src/App.css
@@ -150,7 +150,7 @@ ul li a {
 }
 
 /* My Profle  */
-.card {
+.profile-card {
     box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
     max-width: 300px;
     margin: auto;
@@ -162,7 +162,7 @@ ul li a {
     font-size: 18px;
 }
 
-.card button {
+.profile-card button {
     border: none;
     outline: 0;
     display: inline-block;
@@ -175,13 +175,13 @@ ul li a {
     font-size: 18px;
 }
 
-.card a {
+.profile-card a {
     text-decoration: none;
     font-size: 22px;
     color: black;
 }
 
-.card button:hover,
-.card a:hover {
+.profile-card button:hover,
+.profile-card a:hover {
     opacity: 0.7;
 }
