--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,3 @@
-
-
 /* Nav */
 nav a {
     font-size: 18px !important;
@@ -149,4 +147,9 @@ ul li a {
 .profile-card button:hover,
 .profile-card a:hover {
     opacity: 0.7;
+}
+
+/* Rating icon */
+.icon-color {
+    color: red;
 }
