--- a/src/App.css
+++ b/src/App.css
@@ -1,4 +1,10 @@
+@import url('https://fonts.googleapis.com/css2?family=Lobster&display=swap');
+
 /* Nav */
+.logo {
+    font-family: 'Lobster', cursive;
+}
+
 nav a {
     font-size: 18px !important;
 }
@@ -318,4 +324,3 @@ ul li a {
 }
 
 /* Progress nar */
-
